tests/interpreter/fail/306-tuple.hyg
let t: tuple {int, bool} = tuple {1, true};
t._1 <- true;
assert(t._1 = true)